--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,16 @@
-Flask
-Jinja2
-docopt
+alembic==0.9.8
+click==6.7
+docopt==0.6.2
+Flask==0.12.2
+Flask-Migrate==2.1.1
+flask-paginate==0.5.1
+Flask-SQLAlchemy==2.3.2
+itsdangerous==0.24
+Jinja2==2.10
+Mako==1.0.7
+MarkupSafe==1.0
+python-dateutil==2.6.1
+python-editor==1.0.3
+six==1.11.0
+SQLAlchemy==1.2.5
+Werkzeug==0.14.1
